--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "chromadb": "^1.10.4",
+    "chromadb-default-embed": "^2.14.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
