wishper conig changed in docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,28 +1,35 @@
-FROM nikolaik/python-nodejs:python3.10-nodejs18-slim
+FROM node:18-slim
 
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies including Python and Git
 RUN apt-get update && \
-    apt-get install -y ffmpeg build-essential python3-dev && \
+    apt-get install -y ffmpeg python3 python3-pip python3-venv git && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
+
+# Set up a virtual environment to avoid system protection issues
+RUN python3 -m venv /opt/venv
+ENV PATH="/opt/venv/bin:$PATH"
 
 # Install Node.js dependencies
 COPY package*.json ./
 RUN npm install
 
-# Special approach for whisper that avoids dependency conflicts
-RUN pip3 install --no-cache-dir --upgrade pip && \
-    pip3 install --no-cache-dir torch==1.13.1 torchvision==0.14.1 torchaudio==0.13.1 --extra-index-url https://download.pytorch.org/whl/cpu && \
-    pip3 install --no-cache-dir triton==2.0.0 numpy==1.23.5 && \
-    pip3 install --no-cache-dir git+https://github.com/openai/whisper.git
+# Install Python packages in the virtual environment
+RUN pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir torch==1.13.1 torchaudio==0.13.1 --extra-index-url https://download.pytorch.org/whl/cpu && \
+    pip install --no-cache-dir numpy==1.23.5 && \
+    pip install --no-cache-dir git+https://github.com/openai/whisper.git
 
 # Copy application code
 COPY . .
 
 # Create necessary temp directories
 RUN mkdir -p controllers/temp controllers/.model
+
+# Add whisper to PATH so it can be executed directly
+ENV PATH="/opt/venv/bin:$PATH"
 
 EXPOSE 5000
 
