--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.3.0",
     "react-speech-recognition": "^3.10.0"
   },
   "devDependencies": {
