--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,17 +1,20 @@
-FROM node:18-alpine
+FROM node:18-slim
 
 WORKDIR /app
 
-# Install dependencies
+# Copy package files first
 COPY package*.json ./
+
+# Install dependencies including react-router-dom
 RUN npm install
 
 # Copy application code
 COPY . .
 
-# Create environment file
-RUN echo "VITE_BACKEND_URL=http://localhost:8080/api" > .env
+# Create environment variables file
+ENV VITE_BACKEND_URL=http://64.227.152.247:5000/api
 
 EXPOSE 5173
 
+# Command to run the app
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
