--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   backend:
     build: ./backend
     image: eduub_backend:latest
+    container_name: eduub-backend
     ports:
       - "5000:5000"
     environment:
@@ -11,13 +12,14 @@ services:
       - CHROMA_URL=http://chromadb:8000
       - JWT_SECRET=manoranjanheremano
       - PORT=5000
-      - CORS_ORIGINS=http://64.227.152.247:5173,http://localhost:5173,https://eduub.mano.systems
+      - CORS_ORIGINS=http://64.227.152.247:5173,http://localhost:5173,https://eduub.mano.systems,https://eduubserver.mano.systems
       - CLOUDINARY_CLOUD_NAME=dko27wuzc
       - CLOUDINARY_API_KEY=869282847493747
       - CLOUDINARY_API_SECRET=bzjlOOEJhvzz5TnxPeLFk5nVbaU
       - GROQ_API_KEY=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
+    # Use bind mount instead of volume for simpler debugging
     volumes:
-      - backend_data:/app/controllers/temp
+      - ./backend/temp:/app/controllers/temp
     depends_on:
       - chromadb
     networks:
@@ -28,9 +30,10 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    image: eduub_frontend:latest  
+    image: eduub_frontend:latest
+    container_name: eduub-frontend
     ports:
-      - "5173:80"
+      - "5173:5173"
     environment:
       - VITE_BACKEND_URL=https://eduubserver.mano.systems/api
     depends_on:
@@ -41,10 +44,12 @@ services:
 
   chromadb:
     image: ghcr.io/chroma-core/chroma:latest
+    container_name: eduub-chromadb
     ports:
       - "8000:8000"
+    # Use bind mount instead of volume
     volumes:
-      - chroma_data:/chroma/chroma
+      - ./chroma-data:/chroma/chroma
     environment:
       - PERSIST_DIRECTORY=/chroma/chroma
     networks:
@@ -53,8 +58,5 @@ services:
 
 networks:
   app-network:
+    name: eduub-network
     driver: bridge
-
-volumes:
-  backend_data:
-  chroma_data:
