--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,24 +1,26 @@
 server {
     listen 80;
-    
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Enable gzip compression
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
         try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache";
     }
-    
-    # CORS headers
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-    add_header 'Access-Control-Allow-Headers' 'Origin,Authorization,Content-Type,Accept,X-Requested-With' always;
-    
-    # Handle OPTIONS preflight requests
-    if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Origin,Authorization,Content-Type,Accept,X-Requested-With' always;
-        add_header 'Content-Type' 'text/plain charset=UTF-8';
-        add_header 'Content-Length' '0';
-        return 204;
+
+    # Static assets can be cached longer
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
+    }
+
+    # Health check endpoint
+    location /health {
+        return 200 'OK';
+        add_header Content-Type text/plain;
     }
 }
