--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "5000:5000"
     environment:
       - MONGODB_URI=mongodb+srv://manoranjanheremano:gJbpCkWHuV1NeTgQ@cluster0.iprim.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-      - CHROMA_URL=http://chromadb:8000
+      - CHROMA_URL=http://eduub-chromadb:8000
       - JWT_SECRET=manoranjanheremano
       - PORT=5000
       - CORS_ORIGINS=http://64.227.152.247:5173,http://localhost:5173,https://eduub.mano.systems,https://eduubserver.mano.systems
