--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,18 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@mui/x-date-pickers": "^7.28.0",
     "axios": "^1.8.2",
+    "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.10",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-speech-recognition": "^3.10.0",
