--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,7 @@
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodejs-whisper": "^0.2.6",
+    "assemblyai": "^3.0.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "openai": "^4.83.0",
