--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-slim AS build
+FROM node:18-slim
 
 WORKDIR /app
 COPY package*.json ./
@@ -8,18 +8,6 @@ COPY . .
 # Create .env file with environment variables
 RUN echo "VITE_BACKEND_URL=http://167.71.229.78:5000/api" > .env
 
-# Build the app
-RUN npm run build
+EXPOSE 5173
 
-# Production stage using Nginx for serving static files
-FROM nginx:alpine
-
-# Copy built files
-COPY --from=build /app/dist /usr/share/nginx/html
-
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
