--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name localhost eduub-ai.vercel.app;
     root /usr/share/nginx/html;
     index index.html;
 
@@ -12,7 +12,7 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
-    add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval' http://167.71.229.78:5000 http://64.227.152.247:5000; connect-src 'self' http://167.71.229.78:5000 http://64.227.152.247:5000 ws://167.71.229.78:* ws://64.227.152.247:*;" always;
+    add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' 'unsafe-eval' https://eduub-ai.onrender.com; connect-src 'self' https://eduub-ai.onrender.com wss://eduub-ai.vercel.app:*;" always;
 
     # Cache static assets
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
@@ -47,7 +47,7 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
-        proxy_pass http://167.71.229.78:5000/;
+        proxy_pass https://eduub-ai.onrender.com/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
