--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,12 +27,14 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - VITE_BACKEND_URL=${VITE_BACKEND_URL}
     image: eduub_frontend:latest
     container_name: eduub-frontend
     ports:
       - "5173:80"
     environment:
-      - VITE_BACKEND_URL=https://eduubserver.mano.systems/api
+      - VITE_BACKEND_URL=${VITE_BACKEND_URL}
       - CORS_ORIGINS=http://64.227.152.247:5173,http://localhost:5173,https://eduub.mano.systems,https://eduubserver.mano.systems
     depends_on:
       - backend
