--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/text-to-speech": "^5.8.0",
     "@huggingface/inference": "^3.3.0",
+    "assemblyai": "^3.0.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "chromadb": "^1.10.4",
@@ -22,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "ffmpeg": "^0.0.4",
     "fluent-ffmpeg": "^2.1.3",
     "groq": "^3.77.2",
     "groq-sdk": "^0.15.0",
@@ -29,7 +32,6 @@
     "mongoose": "^8.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "assemblyai": "^3.0.0",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "openai": "^4.83.0",
